--- a/m3/w3/progetto/progetto/src/app/pages/users/my-user/my-user.component.html
+++ b/m3/w3/progetto/progetto/src/app/pages/users/my-user/my-user.component.html
@@ -1,1 +1,8 @@
-<p>my-user works!</p>
+<nz-content>
+  <app-user-form>
+    <ng-container button >
+      <button class="btn" nz-button nzType="primary" [nzLoading]="isLoading">Salva Modifice</button>
+      <a class="btn" nz-button nzType="primary" (click)="logout()" nzDanger>logout</a>
+    </ng-container>
+  </app-user-form>
+</nz-content>
