--- a/m3/w3/progetto/progetto/src/app/Model/user-form/user-form.component.html
+++ b/m3/w3/progetto/progetto/src/app/Model/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <form class="register-form" nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
-  <h1>Registrati</h1>
+  <ng-content title></ng-content>
   <nz-form-item>
     <nz-form-control nzErrorTip="Inserisci un nome di almeno 3 caratteri" nzValidateStatus="" nzHasFeedback>
       <nz-input-group nzPrefixIcon="user">
