--- a/m3/w3/progetto/progetto/src/app/pages/posts/posts.component.html
+++ b/m3/w3/progetto/progetto/src/app/pages/posts/posts.component.html
@@ -1,4 +1,16 @@
 <nz-content>
-  <p>posts works!</p>
+
+  <app-post-form *ngIf="isLogged()" [data]="data" (newData)="update($event)"></app-post-form>
+
+  <nz-skeleton
+  [nzAvatar]="true"
+  [nzActive]="true"
+  [nzTitle]="true"
+  [nzLoading]="isLoading"
+></nz-skeleton>
+
+<app-post *ngIf="!isLoading" [data]="data"></app-post>
 
 </nz-content>
+
+
