--- a/m3/w3/progetto/progetto/src/app/auth/users/users.component.html
+++ b/m3/w3/progetto/progetto/src/app/auth/users/users.component.html
@@ -1,8 +1,9 @@
 <nz-content>
   <app-user-form>
+    <ng-container title><h3>Il tuo account:</h3></ng-container>
     <ng-container button >
-      <button class="btn" nz-button nzType="primary" [nzLoading]="isLoading">Salva Modifice</button>
-      <a class="btn btn-logout" nz-button nzType="primary" (click)="logout()" nzDanger>logout</a>
+      <button class="btn" nz-button nzType="primary" [nzLoading]="isLoading">Salva Modifiche</button>
+      <a class="btn btn-logout" nz-button nzType="primary" (click)="logout()" nzDanger>Logout</a>
       <a class="btn-delete" nz-button nzType="primary" [nzLoading]="isLoading" (click)="deleteUser()" nzDanger>Elimina Account</a>
     </ng-container>
   </app-user-form>
